index/gD: experiment with enabling custom CSS on 'index' pages as well (to support .reader-mode on /blog/2025/area-man bc blogs have 'index' set for minimalist apperance)

--- a/template/default.html
+++ b/template/default.html
@@ -92,8 +92,7 @@
   </noscript>
 </head>
 
-<!-- Skip fancy css like dropcaps on index pages -->
-$if(index)$<body class="page-$safe-url$">$else$<body class="page-$safe-url$ $css-extension$">$endif$
+<body class="page-$safe-url$ $css-extension$">
 
   <!-- SSI: Inlined asset links -->
   <!-- INLINED-ASSET-LINKS-BEGIN-->
