--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -9716,6 +9716,12 @@ a[data-link-icon='worldcat'] {
     }
 }
 
+a[data-link-icon='caduceus'] { /* medical snake Asclepius icon for hospitals etc */
+    --link-icon-size: 0.95em;
+    --link-icon-offset-x: -0.15em;
+    --link-icon-offset-y: 0.45em;
+}
+
 /*=------------------=*/
 /*= Wikipedia links. =*/
 /*=------------------=*/
