hakyll: create new page-level body CSS variable, .page-created-recently, to allow disabling some styling )see <https://news.ycombinator.com/item?id=44151959>)

--- a/template/default.html
+++ b/template/default.html
@@ -92,8 +92,7 @@
   </noscript>
 </head>
 
-<body class="page-$safe-url$ $css-extension$">
-
+<body class="page-$safe-url$ $css-extension$$page-created-recently$">
   <!-- SSI: Inlined asset links -->
   <!-- INLINED-ASSET-LINKS-BEGIN-->
   <!--#include virtual="/static/include/inlined-asset-links.html" -->
