--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -9183,7 +9183,7 @@ a[data-link-icon='𝓡 𝐒'] { /* Rolling Stone */
 }
 
 a[data-link-icon='≈'] { /* similar-links (ALMOST EQUAL TO) */
-    --link-icon-size: 0.95em;
+    --link-icon-size: 1em;
     --link-icon-offset-x: 0.15em;
     --link-icon-offset-y: 0em;
     --link-icon-opacity: 0.75;
@@ -9266,10 +9266,11 @@ a[data-link-icon='apple'] {
     --link-icon-opacity: 0.5;
 }
 
-a[data-link-icon='arrows-pointing-inwards-to-dot'] { /* bl backlinks 'implosion' */
-    --link-icon-size: 0.85em;
+a[data-link-icon='arrows-pointing-inwards-to-dot'] { /* bl backlinks ‘implosion’ */
+    --link-icon-size: 0.90em;
+    --link-icon-offset-y: 0.22em;
     --link-icon-offset-y: 0.25em;
-    --link-icon-opacity: 0.65;
+    --link-icon-opacity: 0.70;
 }
 
 a[data-link-icon='atlas-obscura'] {
@@ -9284,9 +9285,10 @@ a[data-link-icon='audio-waveform-lines'] { /* Radiolab */
     --link-icon-offset-y: 0.30em;
 }
 
-a[data-link-icon='bibliography'] { /* lb link-bibliography 'table of contents' */
-    --link-icon-size: 0.60em;
-    --link-icon-offset-y: 0.10em;
+a[data-link-icon='bibliography'] { /* lb link-bibliography ‘table of contents’ */
+    --link-icon-size: 0.69em;
+    --link-icon-offset-y: 0.12em;
+    --link-icon-opacity: 0.60;
 }
 
 a[data-link-icon='bitcoin'] {
