--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2715,18 +2715,18 @@ ul.interview .speaker {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1743875941#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1753380335#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1743875941#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1753380335#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1743875941#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1753380335#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1743875941#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1753380335#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5834,7 +5834,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1743875941#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1753380335#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -6020,7 +6020,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1743875941#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1753380335#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6544,7 +6544,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1743875941#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1753380335#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7580,7 +7580,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1743875941#question');
+    background-image: url('/static/img/icon/icons.svg?v=1753380335#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7784,7 +7784,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
     content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-    background-image: url('/static/img/icon/icons.svg?v=1743875941#magnifying-glass-plus-light');
+    background-image: url('/static/img/icon/icons.svg?v=1753380335#magnifying-glass-plus-light');
     background-size: 56px 56px;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -8330,7 +8330,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1743875941#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1753380335#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -8411,7 +8411,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1743875941#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1753380335#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
@@ -9183,7 +9183,7 @@ a[data-link-icon='𝓡 𝐒'] { /* Rolling Stone */
 }
 
 a[data-link-icon='≈'] { /* similar-links (ALMOST EQUAL TO) */
-    --link-icon-size: 0.95em;
+    --link-icon-size: 1em;
     --link-icon-offset-x: 0.15em;
     --link-icon-offset-y: 0em;
     --link-icon-opacity: 0.75;
@@ -9266,10 +9266,11 @@ a[data-link-icon='apple'] {
     --link-icon-opacity: 0.5;
 }
 
-a[data-link-icon='arrows-pointing-inwards-to-dot'] { /* bl backlinks 'implosion' */
-    --link-icon-size: 0.85em;
+a[data-link-icon='arrows-pointing-inwards-to-dot'] { /* bl backlinks ‘implosion’ */
+    --link-icon-size: 0.90em;
+    --link-icon-offset-y: 0.22em;
     --link-icon-offset-y: 0.25em;
-    --link-icon-opacity: 0.65;
+    --link-icon-opacity: 0.70;
 }
 
 a[data-link-icon='atlas-obscura'] {
@@ -9284,9 +9285,10 @@ a[data-link-icon='audio-waveform-lines'] { /* Radiolab */
     --link-icon-offset-y: 0.30em;
 }
 
-a[data-link-icon='bibliography'] { /* lb link-bibliography 'table of contents' */
-    --link-icon-size: 0.60em;
-    --link-icon-offset-y: 0.10em;
+a[data-link-icon='bibliography'] { /* lb link-bibliography ‘table of contents’ */
+    --link-icon-size: 0.69em;
+    --link-icon-offset-y: 0.12em;
+    --link-icon-opacity: 0.60;
 }
 
 a[data-link-icon='bitcoin'] {
