--- a/css/reader-mode-initial.css
+++ b/css/reader-mode-initial.css
@@ -132,6 +132,10 @@ body.reader-mode-active .date-range .subsup {
     margin: -0.5em 0 0 0;
 }
 
+body.reader-mode-active .reader-mode-disable-when-clicked {
+	cursor: pointer;
+}
+
 /*  Anti-style zone.
  */
 body.reader-mode-active .reader-mode-style-not * {
